# drum-pattern-markov-chain

./: LICENSE  README.md  drum_midi_translator.py  example.ipynb  pyproject.toml
example_midi_file/: Example_1.mid  Example_2.mid  Example_3.mid  Example_4.mid  Example_5.mid  Example_6.mid  Example_7.mid  Example_8.mid  Example_9.mid
export_markov_chain_midi_file/: markov_drum_sample_0.mid  markov_drum_sample_1.mid  markov_drum_sample_10.mid  markov_drum_sample_11.mid  markov_drum_sample_12.mid  markov_drum_sample_14.mid  markov_drum_sample_3.mid  markov_drum_sample_4.mid  markov_drum_sample_5.mid  markov_drum_sample_7.mid  markov_drum_sample_8.mid  markov_drum_sample_9.mid
