[tool.poetry]
name = "drum-pattern-markov-chain"
version = "0.1.0"
description = ""
authors = ["nijigen-plot"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^6.15.1"
mido = "^1.2.10"
markovify = "^0.9.4"
numpy = "^1.23.1"
isort = "^5.10.1"
black = "^22.6.0"
pyproject-flake8 = "^0.0.1-alpha.5"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 119

[tool.flake8]
max-line-length = 119
extend-ignore = "E203"
exclude = ".venv"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
